[tool.poetry]
name = "Securly-Marriage-Bot"
version = "0.1.0"
description = "Basically an easier to use and understand Marriage Bot"
authors = ["oliver408i"]

[tool.poetry.dependencies]
python = "^3.8"
pickleDB = "^0.9.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
